src/styles/section.css
section {
  h1, h2, h3 {
    color: var(--color-primary);
    text-wrap: balance;
  }
  h3 {
    margin-bottom: 4px;
  }
  h4 {
    color: var(--color-primary-light);
    text-wrap: balance;
    font-size: 18px;
    font-weight: bold;
  }
  img {
    max-width: 100%;
    /* Keep the width/height attributes' aspect ratio when max-width kicks in */
    height: auto;
  }
  
  ul, ol {
    list-style: revert;
    padding-left: 1.5em;
  }

  li::marker {
    color: var(--color-primary);
    font-weight: 600;
  }

  p {
    text-align: justify;
    word-wrap: break-word;
    hyphens: auto;
    text-wrap: pretty;
  }

  address, article, aside, blockquote, canvas, 
  dd, div, dl, dt, fieldset, figcaption, figure, footer, form, 
  ol, p, pre, section, table, tfoot, ul, video {
    margin-bottom: 8px;
  }
  p + ul, p + ol {
    margin-top: -4px;
  }
  strong {
    color: var(--color-primary);
  }
  .section-title {
    display: flex;
    h1 {
      color: white;
      display: inline-block;
      border-radius: 6px;
      flex-grow: 1;
      height: fit-content;
      align-self: center;
      font-weight: bold;
      font-size: 32px;
    }
    .icon {
      align-self:center; 
      width: 72px;
      height: 72px;
    }
  }

  .chapter {
    padding-top: 20px;
    clear: both;

    h2 {
      display: flex;
      align-items: center;
      border-bottom: 1px solid;
      font-size: 24px;
      font-weight: bold;
      margin-bottom: 16px;
    }

    h3 {
      margin-top: 8px;
    }
    h4 {
      margin-top: 4px;
    }
  }
}

